# mib_cars_analysis

./: .gitignore  README.md  SLIDES_PROPOSAL.md  pyproject.toml
notebooks/: 01_eda_cleansing.ipynb  02_variable_eda.ipynb  04_woe_iv_winloss.ipynb  05_optbinning_amount.ipynb
observation_0/: 00_observation0_basic_validation.ipynb  00_observation0_basic_validation.md  00_observation0_basic_validation_notebook.md  01_amount_maturity_thresholds.ipynb  01_amount_maturity_thresholds.md  02_amount_violinplots_by_age_bucket.ipynb  README.md  maturity_flag_summary.py  observation0_amount_maturity_threshold_summary.csv  observation0_amount_mean_std_observed_vs_theoretical_by_age_bucket.csv  observation0_amount_method1_r2_mae_by_age_bucket.csv  observation0_amount_method2_roundpct_by_age_bucket.csv  observation0_amount_method3_cv_by_pwin_bin.csv  observation0_duplicate_split_summary.csv  observation0_duplicate_state_analysis.csv  observation0_duplicate_state_sample.csv  observation0_exact_repeat_rows.csv  observation0_opportunity_duplicates.csv  observation0_state_change_rows.csv
reports/: 01_eda_cleansing.md  02_variable_eda.md  03_monotonicity_targets.md  04_woe_iv_winloss.md  05_optbinning_amount.md  initial_proposal.md
scripts/: build_model_reports.py  build_reporting_assets.py  generate_category_distribution_plot.R  generate_category_distribution_plot.py  generate_ev_quadrant_segmentation_plot.py  generate_expected_value_threshold_plot.py  generate_focus_gain_sim_plot.py  generate_labeled_eda_support_plots.R  generate_numeric_correlation_heatmap.R  (+4 more)
slidedeck/: styles.css  (+19 more)
(+51 files in other folders)
