[project]
name = "mib-cars-analysis"
version = "0.1.0"
description = "Data science workspace for MIB cars analysis"
readme = "SLIDES_PROPOSAL.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.1.0",
  "pandas>=2.2.0",
  "scipy>=1.14.0",
  "scikit-learn>=1.5.0",
  "statsmodels>=0.14.0",
  "jupyterlab>=4.2.0",
  "ipykernel>=6.29.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.0",
  "plotly>=5.24.0",
  "pyarrow>=18.0.0",
  "openpyxl>=3.1.0",
  "xgboost>=2.1.0",
  "lightgbm>=4.5.0",
  "shap>=0.46.0",
  "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["."]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.7.0",
  "black>=24.10.0",
  "mypy>=1.11.0",
]
